Fix overflow styling in book-call section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -358,7 +358,6 @@ blockquote.q-card>.author::before {
     justify-content: center;
     align-items: stretch;
     width: 100%;
-    overflow: auto;
 }
 
 .book-call-photo {
